GraphiQL screen text alignment is fixed.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,6 @@
 }
 
 .graphiql {
-    text-align: center;
     display: flex;
 }
 
